Fixed the overflow issue on mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -1,77 +1,11 @@
 @import "tailwindcss";
 
-/* .profile{
-    position: relative;
-    border: 0;
-    border-radius: 50%;
+html {
+  overflow-x: hidden;
 }
 
-.profile::after{
-    content: '';
-    position: absolute;
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-} */
-
-.scroll {
+body {
+  overflow-x: hidden;
   width: 100%;
-  height: 300px;
-  overflow-y: auto;
-}
-
-/* Scrollbar styles only apply to this div */
-.scroll::-webkit-scrollbar {
-  width: 8px;
-}
-
-.scroll::-webkit-scrollbar-track {
-  background: #1e1e1e; /* background inside the scrollbar */
-}
-
-.scroll::-webkit-scrollbar-thumb {
-  background-color: #9333ea; /* purple thumb */
-  border-radius: 8px;
-}
-
-.scroll::-webkit-scrollbar-thumb:hover {
-  background-color: #a855f7; /* lighter purple on hover */
-}
-
-/* For Firefox */
-.scroll {
-  scrollbar-width: thin;
-  scrollbar-color: #9333ea #1e1e1e;
-}
-
-
-/* pagination */
-
-/* your global CSS file (e.g., index.css) */
-
-.pagination-theme .ant-pagination-item {
-  background-color: #1f2937;   /* gray-800 */
-  border: none;
-}
-
-.pagination-theme .ant-pagination-item a {
-  color: white;
-}
-
-.pagination-theme .ant-pagination-item-active {
-  background-color: #6d28d9 !important;  /* purple-700 */
-  border-radius: 8px;
-}
-
-.pagination-theme .ant-pagination-item-active a {
-  color: white !important;
-}
-
-.pagination-theme .ant-pagination-prev .ant-pagination-item-link,
-.pagination-theme .ant-pagination-next .ant-pagination-item-link {
-  color: white;
-  background-color: #6d28d9;  /* purple */
-  border-radius: 6px;
+  position: relative;
 }
